img gallery and css update

--- a/art.html
+++ b/art.html
@@ -18,6 +18,7 @@
     <div>
         <h1>Art Portfolio</h1>
     </div>
+    <h2>Assets</h2>
     <div class="gallery">
         <div class="adapt">
             <div class="img-holder">
@@ -26,13 +27,33 @@
                 </a>
             </div>
             <div class="img-holder">
-                <a href="./img/ghost.jpg">
-                    <img src="./img/ghost.jpg" alt="ghost">
+                <a href="./img/scene.png">
+                    <img src="./img/scene.png" alt="ghost">
                 </a>
             </div>
             <div class="img-holder">
-                <a href="./img/scene.png">
-                    <img src="./img/scene.png" alt="ghost">
+                <a href="./img/background-layer.png">
+                    <img src="./img/background-layer.png" alt="ghost">
+                </a>
+            </div>
+            <div class="img-holder">
+                <a href="./img/mid-layer.png">
+                    <img src="./img/mid-layer.png" alt="ghost">
+                </a>
+            </div>
+            <div class="img-holder">
+                <a href="./img/front-layer.png">
+                    <img src="./img/front-layer.png" alt="ghost">
+                </a>
+            </div>
+        </div>
+    </div>
+    <h2>Art Portfolio</h2>
+    <div class="gallery">
+        <div class="adapt">
+            <div class="img-holder">
+                <a href="./img/ghost.jpg">
+                    <img src="./img/ghost.jpg" alt="ghost">
                 </a>
             </div>
         </div>
