--- a/project.html
+++ b/project.html
@@ -19,9 +19,10 @@
         <ul>
             <li>Software Engineering Client Project - coming soon</li>
             <li>Internet Applications Client Project - coming soon</li>
-            <li><a href="coffeescript.html">Flex/Bison Coffee Maker Scripting Language - December 2021</a></li>
+            <li><a href="https://github.com/eroberts22/portfoliobeyond">Portfolio Beyond Source Code</a></li>
+            <li><a href="https://github.com/eroberts22/coffeescript">Flex/Bison Coffee Maker Scripting Language - December 2021</a></li>
             <li><a href="https://lizroberts2000.wixsite.com/asteroids-3d" target="_blank">C++/OpenGL/GLSL 3D Asteroids - April 2021</a></li>
-            <li><a href="dungeondemo.html">Java Dungeon Crawler - January 2021</a></li>
+            <li><a href="https://github.com/eroberts22/apothecary">Java Dungeon Crawler - January 2021</a></li>
             <li><a href="https://lizroberts2000.wixsite.com/garden-simulation" target="_blank">C++ Garden Simulation - April 2020</a></li>
         </ul>
     </div>
