--- a/art.html
+++ b/art.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Portfolio Beyond</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/beyond.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="icon" href="./favicon/favicon.ico" type="image/x-icon">
 </head>
-<body>
+
+<body class="image-body" id="art-body">
     <nav>
         <ul>
             <li><a href="index.html">HOME</a></li>
@@ -15,10 +19,111 @@
             <li><a href="about.html">ABOUT</a></li>
         </ul>
     </nav>
-    <div>
+    <div class="central-box title-box">
         <h1>Art Portfolio</h1>
     </div>
-    <h2>Assets</h2>
+    <div class="central-box art-box">
+        <h2>Space Explorer</h2>
+
+        <div class="card text-white bg-dark mb-3 text-center">
+            <div class="card-body">
+                <h6 class="card-title">Level One Background</h6>
+                <a href="img/space_explorer/space-planets.png">
+                    <img class="card-img-top" src="img/space_explorer/space-planets.png" alt="space-planets">
+                </a>
+            </div>
+
+        </div>
+        <div class="card text-white bg-dark mb-3 text-center">
+            <div class="card-body">
+                <h6 class="card-title">Back Layer</h6>
+                <a href="img/space_explorer/space-planets-back.png">
+                    <img class="card-img-top" src="img/space_explorer/space-planets-back.png" alt="space-planets-back">
+                </a>
+            </div>
+        </div>
+        <div class="card text-white bg-dark mb-3 text-center">
+            <div class="card-body">
+                <h6 class="card-title">Front Layer</h6>
+                <a href="img/space_explorer/space-planets-front.png">
+                    <img class="card-img-top" src="img/space_explorer/space-planets-front.png"
+                        alt="space-planets-front">
+                </a>
+            </div>
+        </div>
+        <div class="card text-white bg-dark mb-3 text-center">
+            <div class="card-body">
+                <h6 class="card-title">Spaceship</h6>
+                <a href="img/space_explorer/rocket.png">
+                    <img class="card-img-top" src="img/space_explorer/rocket.png" alt="rocket">
+                </a>
+            </div>
+        </div>
+        <div class="card text-white bg-dark mb-3 text-center">
+            <div class="card-body">
+                <h6 class="card-title">Asteroid One</h6>
+                <a href="img/space_explorer/asteroid1.png">
+                    <img class="card-img-top" src="img/space_explorer/asteroid1.png" alt="asteroid1">
+                </a>
+            </div>
+        </div>
+        <div class="card text-white bg-dark mb-3 text-center">
+            <div class="card-body">
+                <h6 class="card-title">Asteroid Two</h6>
+                <a href="img/space_explorer/asteroid2.png">
+                    <img class="card-img-top" src="img/space_explorer/asteroid2.png" alt="asteroid2">
+                </a>
+            </div>
+        </div>
+        <div class="card text-white bg-dark mb-3 text-center">
+            <div class="card-body">
+                <h6 class="card-title">End Portal</h6>
+                <a href="img/space_explorer/portal-end.png">
+                    <img class="card-img-top" src="img/space_explorer/portal-end.png" alt="portal">
+                </a>
+            </div>
+        </div>
+        <div class="card text-white bg-dark mb-3 text-center">
+            <div class="card-body">
+                <h6 class="card-title">Fuel Icon</h6>
+                <a href="img/space_explorer/fuel.png">
+                    <img class="card-img-top" src="img/space_explorer/fuel.png" alt="fuel">
+                </a>
+            </div>
+        </div>
+        <div class="card text-white bg-dark mb-3 text-center">
+            <div class="card-body">
+                <h6 class="card-title">Shield Icon</h6>
+                <a href="img/space_explorer/shield.png">
+                    <img class="card-img-top" src="img/space_explorer/shield.png" alt="shield">
+                </a>
+            </div>
+        </div>
+        <div class="card text-white bg-dark mb-3 text-center">
+            <div class="card-body">
+                <h6 class="card-title">Comet</h6>
+                <a href="img/space_explorer/comet.png">
+                    <img class="card-img-top" src="img/space_explorer/comet.png" alt="comet">
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="central-box art-box">
+        <h2>Art Gallery</h2>
+        <div class="card text-white bg-dark mb-3 text-center">
+            <div class="card-body">
+                <h6 class="card-title">Ghost</h6>
+                <a href="img/art_portfolio/ghost.jpg">
+                    <img class="card-img-top" src="img/art_portfolio/ghost.jpg" alt="ghost">
+                </a>
+            </div>
+
+        </div>
+    </div>
+
+
+
+    <!--<h2>space_explorer</h2>
     <div class="gallery">
         <div class="adapt">
             <div class="img-holder">
@@ -57,6 +162,10 @@
                 </a>
             </div>
         </div>
-    </div>
+    </div>-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
