--- a/project.html
+++ b/project.html
@@ -4,9 +4,11 @@
     <title>Portfolio Beyond</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/beyond.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="icon" href="./favicon/favicon.ico" type="image/x-icon">
 </head>
-<body>
+<body class="image-body" id="project-body">
     <nav>
         <ul>
             <li><a href="index.html">HOME</a></li>
@@ -15,7 +17,8 @@
             <li><a href="about.html">ABOUT</a></li>
         </ul>
     </nav>
-    <div class="list-box">
+    <div class="central-box" id="project-box">
+        <h1>Projects</h1>
         <ul>
             <li>Software Engineering Client Project - coming soon</li>
             <li>Internet Applications Client Project - coming soon</li>
@@ -26,6 +29,8 @@
             <li><a href="https://lizroberts2000.wixsite.com/garden-simulation" target="_blank">C++ Garden Simulation - April 2020</a></li>
         </ul>
     </div>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 </html>
