--- a/about.html
+++ b/about.html
@@ -10,10 +10,16 @@
 </head>
 <body class="image-body" id="about-body">
     <nav>
-        <ul>
+        <ul id="menu">
             <li><a href="index.html">HOME</a></li>
             <li><a href="project.html">PROJECTS</a></li>
-            <li><a href="art.html">ART PORTFOLIO</a></li>
+            <li><a href="art.html">ART PORTFOLIO</a>
+            <ul>
+                <li><a href="space-explorer-gallery.html">Space Explorer</a></li>
+                <li><a href="apothecary-gallery.html">Apothecary</a></li>
+                <li><a href="other-art.html">Other Art</a></li>
+            </li>
+            </ul>
             <li><a class="active" href="about.html">ABOUT</a></li>
         </ul>
     </nav>
