--- a/apothecary-gallery.html
+++ b/apothecary-gallery.html
@@ -8,7 +8,7 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="icon" href="./favicon/favicon.ico" type="image/x-icon">
 </head>
-<body class="image-body" id="home-body">
+<body class="image-body" id="art-body">
     <nav>
         <ul id="menu">
             <li><a href="index.html">HOME</a></li>
