--- a/art.html
+++ b/art.html
@@ -9,23 +9,58 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="icon" href="./favicon/favicon.ico" type="image/x-icon">
 </head>
+
 <body class="image-body" id="art-body">
     <nav>
         <ul id="menu">
             <li><a href="index.html">HOME</a></li>
             <li><a href="project.html">PROJECTS</a></li>
             <li><a class="active" href="art.html">ART PORTFOLIO</a>
-            <ul>
-                <li><a href="space-explorer-gallery.html">Space Explorer</a></li>
-                <li><a href="apothecary-gallery.html">Apothecary</a></li>
-                <li><a href="other-art.html">Other Art</a></li>
-            </ul>
+                <ul>
+                    <li><a href="space-explorer-gallery.html">Space Explorer</a></li>
+                    <li><a href="apothecary-gallery.html">Apothecary</a></li>
+                    <li><a href="other-art.html">Other Art</a></li>
+                </ul>
             </li>
             <li><a href="about.html">ABOUT</a></li>
         </ul>
     </nav>
     <div class="central-box title-box">
         <h1>Art Portfolio</h1>
+    </div>
+    <div class="central-box art-home-box">
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="card text-white bg-dark mb-3 text-center">
+                    <div class="card-body">
+                        <h6 class="card-title">Space Explorer</h6>
+                        <a href="space-explorer-gallery.html">
+                            <img class="card-img-top" src="img/space_explorer/rocket.png" alt="space-explorer">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card text-white bg-dark mb-3 text-center">
+                    <div class="card-body">
+                        <h6 class="card-title">Haunted Apothecary</h6>
+                        <a href="apothecary-gallery.html">
+                            <img class="card-img-top" src="img/space_explorer/milkyway-end.png" alt="apothecary">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card text-white bg-dark mb-3 text-center">
+                    <div class="card-body">
+                        <h6 class="card-title">Other Art</h6>
+                        <a href="other-art.html">
+                            <img class="card-img-top" src="img/space_explorer/portal-end.png" alt="ghost">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
