--- a/space-explorer-gallery.html
+++ b/space-explorer-gallery.html
@@ -8,7 +8,7 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="icon" href="./favicon/favicon.ico" type="image/x-icon">
 </head>
-<body class="image-body" id="home-body">
+<body class="image-body" id="art-body">
     <nav>
         <ul id="menu">
             <li><a href="index.html">HOME</a></li>
@@ -23,9 +23,36 @@
             <li><a href="about.html">ABOUT</a></li>
         </ul>
     </nav>
-    <div class="central-box art-box">
+    <div class="central-box title-box">
         <h2>Space Explorer</h2>
-
+    </div>
+    <div class="central-box art-box">
+        <h2>General Assets</h2>
+        <div class="card text-white bg-dark mb-3 text-center">
+            <div class="card-body">
+                <h6 class="card-title">Spaceship</h6>
+                <a href="img/space_explorer/rocket.png">
+                    <img class="card-img-top" src="img/space_explorer/rocket.png" alt="rocket">
+                </a>
+            </div>
+        </div>
+        <div class="card text-white bg-dark mb-3 text-center">
+            <div class="card-body">
+                <h6 class="card-title">Fuel Icon</h6>
+                <a href="img/space_explorer/fuel.png">
+                    <img class="card-img-top" src="img/space_explorer/fuel.png" alt="fuel">
+                </a>
+            </div>
+        </div>
+        <div class="card text-white bg-dark mb-3 text-center">
+            <div class="card-body">
+                <h6 class="card-title">Shield Icon</h6>
+                <a href="img/space_explorer/shield.png">
+                    <img class="card-img-top" src="img/space_explorer/shield.png" alt="shield">
+                </a>
+            </div>
+        </div>
+        <h2>Level One Assets</h2>
         <div class="card text-white bg-dark mb-3 text-center">
             <div class="card-body">
                 <h6 class="card-title">Level One Background</h6>
@@ -33,7 +60,6 @@
                     <img class="card-img-top" src="img/space_explorer/space-planets.png" alt="space-planets">
                 </a>
             </div>
-
         </div>
         <div class="card text-white bg-dark mb-3 text-center">
             <div class="card-body">
@@ -49,14 +75,6 @@
                 <a href="img/space_explorer/space-planets-front.png">
                     <img class="card-img-top" src="img/space_explorer/space-planets-front.png"
                         alt="space-planets-front">
-                </a>
-            </div>
-        </div>
-        <div class="card text-white bg-dark mb-3 text-center">
-            <div class="card-body">
-                <h6 class="card-title">Spaceship</h6>
-                <a href="img/space_explorer/rocket.png">
-                    <img class="card-img-top" src="img/space_explorer/rocket.png" alt="rocket">
                 </a>
             </div>
         </div>
@@ -78,25 +96,18 @@
         </div>
         <div class="card text-white bg-dark mb-3 text-center">
             <div class="card-body">
-                <h6 class="card-title">End Portal</h6>
+                <h6 class="card-title">Portal to Dark Space</h6>
                 <a href="img/space_explorer/portal-end.png">
                     <img class="card-img-top" src="img/space_explorer/portal-end.png" alt="portal">
                 </a>
             </div>
         </div>
+        <h2>Level Two Assets</h2>
         <div class="card text-white bg-dark mb-3 text-center">
             <div class="card-body">
-                <h6 class="card-title">Fuel Icon</h6>
-                <a href="img/space_explorer/fuel.png">
-                    <img class="card-img-top" src="img/space_explorer/fuel.png" alt="fuel">
-                </a>
-            </div>
-        </div>
-        <div class="card text-white bg-dark mb-3 text-center">
-            <div class="card-body">
-                <h6 class="card-title">Shield Icon</h6>
-                <a href="img/space_explorer/shield.png">
-                    <img class="card-img-top" src="img/space_explorer/shield.png" alt="shield">
+                <h6 class="card-title">Level Two Background</h6>
+                <a href="img/space_explorer/space-cold.png">
+                    <img class="card-img-top" src="img/space_explorer/space-cold.png" alt="space-planets-back">
                 </a>
             </div>
         </div>
@@ -105,6 +116,14 @@
                 <h6 class="card-title">Comet</h6>
                 <a href="img/space_explorer/comet.png">
                     <img class="card-img-top" src="img/space_explorer/comet.png" alt="comet">
+                </a>
+            </div>
+        </div>
+        <div class="card text-white bg-dark mb-3 text-center">
+            <div class="card-body">
+                <h6 class="card-title">Portal to Milky Way</h6>
+                <a href="img/space_explorer/milkyway-end.png">
+                    <img class="card-img-top" src="img/space_explorer/milkyway-end.png" alt="comet">
                 </a>
             </div>
         </div>
