--- a/public/art.html
+++ b/public/art.html
@@ -7,14 +7,18 @@
     <link rel="stylesheet" href="css/beyond.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="icon" href="./favicon/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
 
 <body class="image-body" id="art-body">
     <nav>
         <ul id="menu">
             <li><a href="index.html">HOME</a></li>
-            <li><a href="project.html">PROJECTS</a></li>
+            <li><a href="project.html">PROJECTS</a>
+                <ul>
+                    <li><a href="space-explorer.html">Space Explorer</a></li></li>
+                </ul>
+            </li>
             <li><a class="active" href="art.html">ART PORTFOLIO</a>
                 <ul>
                     <li><a href="space-explorer-gallery.html">Space Explorer</a></li>
