--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Portfolio Beyond</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/beyond.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="icon" href="./favicon/favicon.ico" type="image/x-icon">
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
-<body class="image-body" id="about-body">
+<body class="image-body" id="home-body">
     <nav>
         <ul id="menu">
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="project.html">PROJECTS</a></li>
+            <li><a class="active" href="index.html">HOME</a></li>
+            <li><a href="project.html">PROJECTS</a>
+                <ul>
+                    <li><a href="space-explorer.html">Space Explorer</a></li></li>
+                </ul>
+            </li>
             <li><a href="art.html">ART PORTFOLIO</a>
             <ul>
                 <li><a href="space-explorer-gallery.html">Space Explorer</a></li>
@@ -20,7 +25,7 @@
                 <li><a href="other-art.html">Other Art</a></li>
             </li>
             </ul>
-            <li><a class="active" href="about.html">ABOUT</a></li>
+            <li><a href="about.html">ABOUT</a></li>
         </ul>
     </nav>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
