--- a/public/other-art.html
+++ b/public/other-art.html
@@ -6,23 +6,40 @@
     <link rel="stylesheet" href="css/beyond.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="icon" href="./favicon/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
 <body class="image-body" id="art-body">
     <nav>
         <ul id="menu">
             <li><a href="index.html">HOME</a></li>
-            <li><a href="project.html">PROJECTS</a></li>
+            <li><a href="project.html">PROJECTS</a>
+                <ul>
+                    <li><a href="space-explorer.html">Space Explorer</a></li></li>
+                </ul>
+            </li>
             <li><a href="art.html">ART PORTFOLIO</a>
             <ul>
                 <li><a href="space-explorer-gallery.html">Space Explorer</a></li>
-                <li><a class="active" href="apothecary-gallery.html">Apothecary</a></li>
-                <li><a href="other-art.html">Other Art</a></li>
+                <li><a href="apothecary-gallery.html">Apothecary</a></li>
+                <li><a class="active" href="other-art.html">Other Art</a></li>
             </li>
             </ul>
             <li><a href="about.html">ABOUT</a></li>
         </ul>
     </nav>
+    <div class="central-box title-box">
+        <h1>Art Gallery</h1>
+    </div>
+    <div class="central-box art-box">
+        <div class="card text-white bg-dark mb-3 text-center">
+            <div class="card-body">
+                <h6 class="card-title">Ghost</h6>
+                <a href="img/art_portfolio/ghost.jpg">
+                    <img class="card-img-top" src="img/art_portfolio/ghost.jpg" alt="ghost">
+                </a>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
