--- a/public/space-explorer-gallery.html
+++ b/public/space-explorer-gallery.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Portfolio Beyond</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/beyond.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="icon" href="./favicon/favicon.ico" type="image/x-icon">
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
+
 <body class="image-body" id="art-body">
     <nav>
         <ul id="menu">
             <li><a href="index.html">HOME</a></li>
-            <li><a href="project.html">PROJECTS</a></li>
-            <li><a href="art.html">ART PORTFOLIO</a>
-            <ul>
-                <li><a class="active" href="space-explorer-gallery.html">Space Explorer</a></li>
-                <li><a href="apothecary-gallery.html">Apothecary</a></li>
-                <li><a href="other-art.html">Other Art</a></li>
+            <li><a href="project.html">PROJECTS</a>
+                <ul>
+                    <li><a href="space-explorer.html">Space Explorer</a></li></li>
+                </ul>
             </li>
-            </ul>
-            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="art.html">ART PORTFOLIO</a>
+                <ul>
+                    <li><a class="active" href="space-explorer-gallery.html">Space Explorer</a></li>
+                    <li><a href="apothecary-gallery.html">Apothecary</a></li>
+                    <li><a href="other-art.html">Other Art</a></li>
+            </li>
+        </ul>
+        <li><a href="about.html">ABOUT</a></li>
         </ul>
     </nav>
     <div class="central-box title-box">
-        <h2>Space Explorer</h2>
+        <h1>Space Explorer</h1>
     </div>
     <div class="central-box art-box">
         <h2>General Assets</h2>
@@ -36,20 +42,26 @@
                 </a>
             </div>
         </div>
-        <div class="card text-white bg-dark mb-3 text-center">
-            <div class="card-body">
-                <h6 class="card-title">Fuel Icon</h6>
-                <a href="img/space_explorer/fuel.png">
-                    <img class="card-img-top" src="img/space_explorer/fuel.png" alt="fuel">
-                </a>
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="card text-white bg-dark mb-3 text-center">
+                    <div class="card-body">
+                        <h6 class="card-title">Fuel Icon</h6>
+                        <a href="img/space_explorer/fuel.png">
+                            <img class="card-img-top" src="img/space_explorer/fuel.png" alt="fuel">
+                        </a>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="card text-white bg-dark mb-3 text-center">
-            <div class="card-body">
-                <h6 class="card-title">Shield Icon</h6>
-                <a href="img/space_explorer/shield.png">
-                    <img class="card-img-top" src="img/space_explorer/shield.png" alt="shield">
-                </a>
+            <div class="col-sm-6">
+                <div class="card text-white bg-dark mb-3 text-center">
+                    <div class="card-body">
+                        <h6 class="card-title">Shield Icon</h6>
+                        <a href="img/space_explorer/shield.png">
+                            <img class="card-img-top" src="img/space_explorer/shield.png" alt="shield">
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
         <h2>Level One Assets</h2>
@@ -78,20 +90,26 @@
                 </a>
             </div>
         </div>
-        <div class="card text-white bg-dark mb-3 text-center">
-            <div class="card-body">
-                <h6 class="card-title">Asteroid One</h6>
-                <a href="img/space_explorer/asteroid1.png">
-                    <img class="card-img-top" src="img/space_explorer/asteroid1.png" alt="asteroid1">
-                </a>
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="card text-white bg-dark mb-3 text-center">
+                    <div class="card-body">
+                        <h6 class="card-title">Asteroid One</h6>
+                        <a href="img/space_explorer/asteroid1.png">
+                            <img class="card-img-top" src="img/space_explorer/asteroid1.png" alt="asteroid1">
+                        </a>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="card text-white bg-dark mb-3 text-center">
-            <div class="card-body">
-                <h6 class="card-title">Asteroid Two</h6>
-                <a href="img/space_explorer/asteroid2.png">
-                    <img class="card-img-top" src="img/space_explorer/asteroid2.png" alt="asteroid2">
-                </a>
+            <div class="col-sm-6">
+                <div class="card text-white bg-dark mb-3 text-center">
+                    <div class="card-body">
+                        <h6 class="card-title">Asteroid Two</h6>
+                        <a href="img/space_explorer/asteroid2.png">
+                            <img class="card-img-top" src="img/space_explorer/asteroid2.png" alt="asteroid2">
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="card text-white bg-dark mb-3 text-center">
@@ -103,6 +121,7 @@
             </div>
         </div>
         <h2>Level Two Assets</h2>
+        
         <div class="card text-white bg-dark mb-3 text-center">
             <div class="card-body">
                 <h6 class="card-title">Level Two Background</h6>
@@ -127,9 +146,11 @@
                 </a>
             </div>
         </div>
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
