--- a/public/space-explorer.html
+++ b/public/space-explorer.html
@@ -6,13 +6,17 @@
     <link rel="stylesheet" href="css/beyond.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="icon" href="./favicon/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
-<body class="image-body" id="home-body">
+<body class="image-body" id="project-body">
     <nav>
         <ul id="menu">
-            <li><a class="active" href="index.html">HOME</a></li>
-            <li><a href="project.html">PROJECTS</a></li>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="project.html">PROJECTS</a>
+            <ul>
+                <li><a class="active" href="space-explorer.html">Space Explorer</a></li></li>
+            </ul>
+            </li>
             <li><a href="art.html">ART PORTFOLIO</a>
             <ul>
                 <li><a href="space-explorer-gallery.html">Space Explorer</a></li>
@@ -23,6 +27,8 @@
             <li><a href="about.html">ABOUT</a></li>
         </ul>
     </nav>
+    <div class="central-box"><!--add id box for overview of space explorer--></div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
