apothecary assets added, some card links

--- a/public/apothecary-gallery.html
+++ b/public/apothecary-gallery.html
@@ -8,7 +8,7 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
-<body class="image-body" id="art-body">
+<body class="image-body space-body">
     <nav>
         <ul id="menu">
             <li><a href="index.html">HOME</a></li>
@@ -17,19 +17,167 @@
                     <li><a href="space-explorer.html">Space Explorer</a></li></li>
                 </ul>
             </li>
-            <li><a href="art.html">ART PORTFOLIO</a>
+            <li><a href="art.html">PORTFOLIO</a>
             <ul>
                 <li><a href="space-explorer-gallery.html">Space Explorer</a></li>
-                <li><a class="active" href="apothecary-gallery.html">Apothecary</a></li>
+                <li><a class="active" href="apothecary-gallery.html">Haunted Apothecary</a></li>
                 <li><a href="other-art.html">Other Art</a></li>
             </li>
             </ul>
             <li><a href="about.html">ABOUT</a></li>
         </ul>
     </nav>
-    
+    <div class="central-box title-box">
+        <h1>Haunted Apothecary</h1>
+    </div>
+    <div class="central-box art-box">
+        <h2>Monsters</h2>
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="card text-white bg-dark mb-3 text-center">
+                    <div class="card-body">
+                        <h6 class="card-title">Friendly Ghost</h6>
+                        <a href="img/apothecary/ghost1.png">
+                            <img class="card-img-top" src="img/apothecary/ghost1.png" alt="ghost">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="card text-white bg-dark mb-3 text-center">
+                    <div class="card-body">
+                        <h6 class="card-title">Malicious Spectre</h6>
+                        <a href="img/apothecary/spectre.png">
+                            <img class="card-img-top" src="img/apothecary/spectre.png" alt="spectre">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="card text-white bg-dark mb-3 text-center">
+                    <div class="card-body">
+                        <h6 class="card-title">Wailing Wraith</h6>
+                        <a href="img/apothecary/wraith.png">
+                            <img class="card-img-top" src="img/apothecary/wraith.png" alt="wraith">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card text-white bg-dark mb-3 text-center">
+                    <div class="card-body">
+                        <h6 class="card-title">Sneaky Shades</h6>
+                        <a href="img/apothecary/shade.png">
+                            <img class="card-img-top" src="img/apothecary/shade.png" alt="shade">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card text-white bg-dark mb-3 text-center">
+                    <div class="card-body">
+                        <h6 class="card-title">Stinging Jellyfish</h6>
+                        <a href="img/apothecary/jellyfish.png">
+                            <img class="card-img-top" src="img/apothecary/jellyfish.png" alt="jellyfish">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="card text-white bg-dark mb-3 text-center">
+                    <div class="card-body">
+                        <h6 class="card-title">Pale Shadow</h6>
+                        <a href="img/apothecary/shadow.png">
+                            <img class="card-img-top" src="img/apothecary/shadow.png" alt="shadow">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="card text-white bg-dark mb-3 text-center">
+                    <div class="card-body">
+                        <h6 class="card-title">Twilight Nightmare</h6>
+                        <a href="img/apothecary/nightmare.png">
+                            <img class="card-img-top" src="img/apothecary/nightmare.png" alt="nightmare">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <h2>Items</h2>
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="card text-white bg-dark mb-3 text-center">
+                    <div class="card-body">
+                        <h6 class="card-title">Health Potion</h6>
+                        <a href="img/apothecary/health_potion.png">
+                            <img class="card-img-top" src="img/apothecary/health_potion.png" alt="health">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="card text-white bg-dark mb-3 text-center">
+                    <div class="card-body">
+                        <h6 class="card-title">Spell Potion</h6>
+                        <a href="img/apothecary/spell_potion.png">
+                            <img class="card-img-top" src="img/apothecary/spell_potion.png" alt="spell">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="card text-white bg-dark mb-3 text-center">
+                    <div class="card-body">
+                        <h6 class="card-title">Life Potion</h6>
+                        <a href="img/apothecary/life_potion.png">
+                            <img class="card-img-top" src="img/apothecary/life_potion.png" alt="life">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="card text-white bg-dark mb-3 text-center">
+                    <div class="card-body">
+                        <h6 class="card-title">Treasure Chest</h6>
+                        <a href="img/apothecary/chest.png">
+                            <img class="card-img-top" src="img/apothecary/chest.png" alt="chest">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <h2>Background</h2>
+        <div class="card text-white bg-dark mb-3 text-center">
+            <div class="card-body">
+                <h6 class="card-title">Dungeon Room</h6>
+                <a href="img/apothecary/background.png">
+                    <img class="card-img-top" src="img/apothecary/background.png" alt="background">
+                </a>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 </body>
 </html>
+
+<!--
+<div class="col-sm-6">
+    <div class="card text-white bg-dark mb-3 text-center">
+        <div class="card-body">
+            <h6 class="card-title"></h6>
+            <a href="">
+                <img class="card-img-top" src="" alt="">
+            </a>
+        </div>
+    </div>
+</div>
+-->
