--- a/public/art.html
+++ b/public/art.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
 
-<body class="image-body" id="art-body">
+<body class="image-body space-body">
     <nav>
         <ul id="menu">
             <li><a href="index.html">HOME</a></li>
@@ -19,10 +19,10 @@
                     <li><a href="space-explorer.html">Space Explorer</a></li></li>
                 </ul>
             </li>
-            <li><a class="active" href="art.html">ART PORTFOLIO</a>
+            <li><a class="active" href="art.html">PORTFOLIO</a>
                 <ul>
                     <li><a href="space-explorer-gallery.html">Space Explorer</a></li>
-                    <li><a href="apothecary-gallery.html">Apothecary</a></li>
+                    <li><a href="apothecary-gallery.html">Haunted Apothecary</a></li>
                     <li><a href="other-art.html">Other Art</a></li>
                 </ul>
             </li>
@@ -49,7 +49,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Haunted Apothecary</h6>
                         <a href="apothecary-gallery.html">
-                            <img class="card-img-top" src="img/space_explorer/milkyway-end.png" alt="apothecary">
+                            <img class="card-img-top" src="img/apothecary/jellyfish.png" alt="apothecary">
                         </a>
                     </div>
                 </div>
