--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
-<body class="image-body" id="home-body">
+<body class="image-body space-body">
     <nav>
         <ul id="menu">
             <li><a class="active" href="index.html">HOME</a></li>
@@ -18,10 +18,10 @@
                     <li><a href="space-explorer.html">Space Explorer</a></li></li>
                 </ul>
             </li>
-            <li><a href="art.html">ART PORTFOLIO</a>
+            <li><a href="art.html">PORTFOLIO</a>
             <ul>
                 <li><a href="space-explorer-gallery.html">Space Explorer</a></li>
-                <li><a href="apothecary-gallery.html">Apothecary</a></li>
+                <li><a href="apothecary-gallery.html">Haunted Apothecary</a></li>
                 <li><a href="other-art.html">Other Art</a></li>
             </li>
             </ul>
