--- a/public/space-explorer-gallery.html
+++ b/public/space-explorer-gallery.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
 
-<body class="image-body" id="art-body">
+<body class="image-body space-body">
     <nav>
         <ul id="menu">
             <li><a href="index.html">HOME</a></li>
@@ -19,10 +19,10 @@
                     <li><a href="space-explorer.html">Space Explorer</a></li></li>
                 </ul>
             </li>
-            <li><a href="art.html">ART PORTFOLIO</a>
+            <li><a href="art.html">PORTFOLIO</a>
                 <ul>
                     <li><a class="active" href="space-explorer-gallery.html">Space Explorer</a></li>
-                    <li><a href="apothecary-gallery.html">Apothecary</a></li>
+                    <li><a href="apothecary-gallery.html">Haunted Apothecary</a></li>
                     <li><a href="other-art.html">Other Art</a></li>
             </li>
         </ul>
@@ -130,23 +130,28 @@
                 </a>
             </div>
         </div>
-        <div class="card text-white bg-dark mb-3 text-center">
-            <div class="card-body">
-                <h6 class="card-title">Comet</h6>
-                <a href="img/space_explorer/comet.png">
-                    <img class="card-img-top" src="img/space_explorer/comet.png" alt="comet">
-                </a>
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="card text-white bg-dark mb-3 text-center">
+                    <div class="card-body">
+                        <h6 class="card-title">Comet</h6>
+                        <a href="img/space_explorer/comet.png">
+                            <img class="card-img-top" src="img/space_explorer/comet.png" alt="comet">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="card text-white bg-dark mb-3 text-center">
+                    <div class="card-body">
+                        <h6 class="card-title">Portal to Milky Way</h6>
+                        <a href="img/space_explorer/milkyway-end.png">
+                            <img class="card-img-top" src="img/space_explorer/milkyway-end.png" alt="comet">
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="card text-white bg-dark mb-3 text-center">
-            <div class="card-body">
-                <h6 class="card-title">Portal to Milky Way</h6>
-                <a href="img/space_explorer/milkyway-end.png">
-                    <img class="card-img-top" src="img/space_explorer/milkyway-end.png" alt="comet">
-                </a>
-            </div>
-        </div>
-
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
