--- a/public/about.html
+++ b/public/about.html
@@ -15,6 +15,8 @@
             <li><a href="project.html">PROJECTS</a>
                 <ul>
                     <li><a href="space-explorer.html">Space Explorer</a></li></li>
+                    <li><a href="apothecary.html">Haunted Apothecary</a></li>
+                    <li><a href="coffeescript.html">Coffee Maker Script</a></li>
                 </ul>
             </li>
             <li><a href="art.html">PORTFOLIO</a>
