--- a/public/art.html
+++ b/public/art.html
@@ -17,6 +17,8 @@
             <li><a href="project.html">PROJECTS</a>
                 <ul>
                     <li><a href="space-explorer.html">Space Explorer</a></li></li>
+                    <li><a href="apothecary.html">Haunted Apothecary</a></li>
+                    <li><a href="coffeescript.html">Coffee Maker Script</a></li>
                 </ul>
             </li>
             <li><a class="active" href="art.html">PORTFOLIO</a>
@@ -37,7 +39,7 @@
             <div class="col-sm-4">
                 <div class="card text-white bg-dark mb-3 text-center">
                     <div class="card-body">
-                        <h6 class="card-title">Space Explorer</h6>
+                        <h2 class="card-title">Space Explorer</h2>
                         <a href="space-explorer-gallery.html">
                             <img class="card-img-top" src="img/space_explorer/rocket.png" alt="space-explorer">
                         </a>
@@ -47,7 +49,7 @@
             <div class="col-sm-4">
                 <div class="card text-white bg-dark mb-3 text-center">
                     <div class="card-body">
-                        <h6 class="card-title">Haunted Apothecary</h6>
+                        <h2 class="card-title">Haunted Apothecary</h2>
                         <a href="apothecary-gallery.html">
                             <img class="card-img-top" src="img/apothecary/jellyfish.png" alt="apothecary">
                         </a>
@@ -57,7 +59,7 @@
             <div class="col-sm-4">
                 <div class="card text-white bg-dark mb-3 text-center">
                     <div class="card-body">
-                        <h6 class="card-title">Other Art</h6>
+                        <h2 class="card-title">Other Art</h2>
                         <a href="other-art.html">
                             <img class="card-img-top" src="img/space_explorer/portal-end.png" alt="ghost">
                         </a>
