--- a/public/project.html
+++ b/public/project.html
@@ -17,6 +17,8 @@
             <li><a class="active" href="project.html">PROJECTS</a>
                 <ul>
                     <li><a href="space-explorer.html">Space Explorer</a></li>
+                    <li><a href="apothecary.html">Haunted Apothecary</a></li>
+                    <li><a href="coffeescript.html">Coffee Maker Script</a></li>
             </li>
         </ul>
         </li>
@@ -38,7 +40,7 @@
             <div class="col-sm-4">
                 <div class="card text-white bg-dark mb-3 text-center">
                     <div class="card-body">
-                        <h6 class="card-title">Space Explorer</h6>
+                        <h2 class="card-title">Space Explorer</h2>
                         <a href="space-explorer.html">
                             <img class="card-img-top" src="img/space_explorer/rocket.png" alt="space-explorer">
                         </a>
@@ -48,7 +50,7 @@
             <div class="col-sm-4">
                 <div class="card text-white bg-dark mb-3 text-center">
                     <div class="card-body">
-                        <h6 class="card-title">Haunted Apothecary</h6>
+                        <h2 class="card-title">Haunted Apothecary</h2>
                         <a href="apothecary.html">
                             <img class="card-img-top" src="img/apothecary/spectre.png" alt="apothecary">
                         </a>
@@ -58,7 +60,7 @@
             <div class="col-sm-4">
                 <div class="card text-white bg-dark mb-3 text-center">
                     <div class="card-body">
-                        <h6 class="card-title">Coffee Maker Script</h6>
+                        <h2 class="card-title">Coffee Maker Script</h2>
                         <a href="coffeescript.html">
                             <img class="card-img-top" src="img/coffee-script/coffeecup.png" alt="coffeescript">
                         </a>
