--- a/public/space-explorer-gallery.html
+++ b/public/space-explorer-gallery.html
@@ -17,6 +17,8 @@
             <li><a href="project.html">PROJECTS</a>
                 <ul>
                     <li><a href="space-explorer.html">Space Explorer</a></li></li>
+                    <li><a href="apothecary.html">Haunted Apothecary</a></li>
+                    <li><a href="coffeescript.html">Coffee Maker Script</a></li>
                 </ul>
             </li>
             <li><a href="art.html">PORTFOLIO</a>
@@ -34,12 +36,26 @@
     </div>
     <div class="central-box art-box">
         <h2>General Assets</h2>
-        <div class="card text-white bg-dark mb-3 text-center">
-            <div class="card-body">
-                <h6 class="card-title">Spaceship</h6>
-                <a href="img/space_explorer/rocket.png">
-                    <img class="card-img-top" src="img/space_explorer/rocket.png" alt="rocket">
-                </a>
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="card text-white bg-dark mb-3 text-center">
+                    <div class="card-body">
+                        <h6 class="card-title">Spaceship</h6>
+                        <a href="img/space_explorer/rocket.png">
+                            <img class="card-img-top" src="img/space_explorer/rocket.png" alt="rocket">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="card text-white bg-dark mb-3 text-center">
+                    <div class="card-body">
+                        <h6 class="card-title">End Portal</h6>
+                        <a href="img/space_explorer/portal-end.png">
+                            <img class="card-img-top" src="img/space_explorer/portal-end.png" alt="portal">
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row">
@@ -112,14 +128,6 @@
                 </div>
             </div>
         </div>
-        <div class="card text-white bg-dark mb-3 text-center">
-            <div class="card-body">
-                <h6 class="card-title">Portal to Dark Space</h6>
-                <a href="img/space_explorer/portal-end.png">
-                    <img class="card-img-top" src="img/space_explorer/portal-end.png" alt="portal">
-                </a>
-            </div>
-        </div>
         <h2>Level Two Assets</h2>
         
         <div class="card text-white bg-dark mb-3 text-center">
@@ -144,7 +152,7 @@
             <div class="col-sm-6">
                 <div class="card text-white bg-dark mb-3 text-center">
                     <div class="card-body">
-                        <h6 class="card-title">Portal to Milky Way</h6>
+                        <h6 class="card-title">Milky Way Portal</h6>
                         <a href="img/space_explorer/milkyway-end.png">
                             <img class="card-img-top" src="img/space_explorer/milkyway-end.png" alt="comet">
                         </a>
