art gallery fix

--- a/art.html
+++ b/art.html
@@ -18,7 +18,7 @@
     <div class="central-box title-box">
         <h1>Art Portfolio</h1>
     </div>
-    <div class="central-box art-home-box">
+    <div class="central-box">
         <div class="row">
             <div class="col-sm-4">
                 <div class="card text-white bg-dark mb-3 text-center">
