--- a/art.html
+++ b/art.html
@@ -20,7 +20,7 @@
     </div>
     <div class="central-box">
         <div class="row">
-            <div class="col-sm-4">
+            <div class="col-lg-4 col-sm-12">
                 <div class="card text-white bg-dark mb-3 text-center">
                     <div class="card-body">
                         <h2 class="card-title">Space Explorer</h2>
@@ -30,7 +30,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-lg-4 col-sm-12">
                 <div class="card text-white bg-dark mb-3 text-center">
                     <div class="card-body">
                         <h2 class="card-title">Haunted Apothecary</h2>
@@ -40,7 +40,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-lg-4 col-sm-12">
                 <div class="card text-white bg-dark mb-3 text-center">
                     <div class="card-body">
                         <h2 class="card-title">Other Art</h2>
