--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="central-box">
         <div class="row">
-            <div class="col-sm-4">
+            <div class="col-lg-4 col-sm-12">
                 <div class="card text-white bg-dark mb-3 text-center">
                     <div class="card-body">
                         <h2 class="card-title">Projects</h2>
@@ -29,7 +29,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-lg-4 col-sm-12">
                 <div class="card text-white bg-dark mb-3 text-center">
                     <div class="card-body">
                         <h2 class="card-title">Art Portfolio</h2>
@@ -39,7 +39,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-lg-4 col-sm-12">
                 <div class="card text-white bg-dark mb-3 text-center">
                     <div class="card-body">
                         <h2 class="card-title">About</h2>
