--- a/art.html
+++ b/art.html
@@ -19,6 +19,7 @@
         <h1>Art Portfolio</h1>
     </div>
     <div class="central-box">
+        <!--<p>Original game assets and art</p>-->
         <div class="row">
             <div class="col-lg-4 col-sm-12">
                 <div class="card text-white bg-dark mb-3 text-center">
