--- a/coffeescript.html
+++ b/coffeescript.html
@@ -13,6 +13,9 @@
 </head>
 <body class="image-body space-body">
     <div id="navbar"></div>
+    <div class="central-box title-box">
+        <h1>Coffee Maker Script</h1>
+    </div>
     <div class="central-box">
         <a href="https://github.com/eroberts22/coffeescript">Flex/Bison Coffee Maker Scripting Language - December 2021</a>
     </div>
