--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 <body class="image-body space-body">
     <div id="navbar"></div>
     <div class="central-box title-box">
-        <h1>Home</h1>
+        <h1>Portfolio Beyond</h1>
     </div>
     <div class="central-box">
+        <!--<p>add sum stuff here</p>-->
         <div class="row">
             <div class="col-lg-4 col-sm-12">
                 <div class="card text-white bg-dark mb-3 text-center">
