--- a/nav.html
+++ b/nav.html
@@ -14,7 +14,7 @@
                     <li><a href="coffeescript.html">Coffee Maker Script</a></li>
                 </ul>
             </li>
-            <li><a href="art.html">PORTFOLIO</a>
+            <li><a href="art.html">ART PORTFOLIO</a>
             <ul>
                 <li><a href="space-explorer-gallery.html">Space Explorer</a></li>
                 <li><a href="apothecary-gallery.html">Haunted Apothecary</a></li>
