--- a/space-explorer.html
+++ b/space-explorer.html
@@ -27,8 +27,8 @@
             Managing these resources is crucial, or else mission failure is inevitable. <br><br>
             See the game assets <a href="space-explorer-gallery.html">here</a>.
         </p>
-        
         <a class="btn btn-outline-light" style="margin: auto; font-size:150%;" href="game.html">Play the Game</a>
+        <p style="text-align: center;">(Only adapted to work on desktop)</p>
     </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
