--- a/apothecary.html
+++ b/apothecary.html
@@ -15,6 +15,9 @@
 
 <body class="image-body space-body">
     <div id="navbar"></div>
+    <div class="central-box title-box">
+        <h1>Haunted Apothecary</h1>
+    </div>
     <div class="central-box">
         <a href="https://github.com/eroberts22/apothecary">Java Dungeon Crawler - January 2021</a>
         <p>See the game assets <a href="apothecary-gallery.html">here</a>.</p>
