some icon changes, need to change about

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="card-body">
                         <h2 class="card-title">Projects</h2>
                         <a href="project.html">
-                            <img class="card-img-top" src="img/coffee-script/coffeecup.png" alt="project-link">
+                            <img class="card-img-top" src="img/devproj.png" alt="project-link">
                         </a>
                     </div>
                 </div>
@@ -35,7 +35,7 @@
                     <div class="card-body">
                         <h2 class="card-title">Art Portfolio</h2>
                         <a href="art.html">
-                            <img class="card-img-top" src="img/space_explorer/milkyway-end.png" alt="art-link">
+                            <img class="card-img-top" src="img/devart.png" alt="art-link">
                         </a>
                     </div>
                 </div>
