card height adjustment

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div class="card-body">
                         <h2 class="card-title">About</h2>
                         <a href="about.html">
-                            <img class="card-img-top" src="img/space_explorer/portal-end.png" alt="about-link">
+                            <img class="card-img-top" src="img/devabt.png" alt="about-link">
                         </a>
                     </div>
                 </div>
