--- a/art.html
+++ b/art.html
@@ -21,8 +21,8 @@
     <div class="central-box">
         <!--<p>Original game assets and art</p>-->
         <div class="row">
-            <div class="col-lg-4 col-sm-12">
-                <div class="card text-white bg-dark mb-3 text-center">
+            <div class="col-lg-4 col-sm-12 py-2">
+                <div class="card text-white bg-dark mb-3 text-center h-100">
                     <div class="card-body">
                         <h2 class="card-title">Space Explorer</h2>
                         <a href="space-explorer-gallery.html">
@@ -31,8 +31,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-sm-12">
-                <div class="card text-white bg-dark mb-3 text-center">
+            <div class="col-lg-4 col-sm-12 py-2">
+                <div class="card text-white bg-dark mb-3 text-center  h-100">
                     <div class="card-body">
                         <h2 class="card-title">Haunted Apothecary</h2>
                         <a href="apothecary-gallery.html">
@@ -41,8 +41,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-sm-12">
-                <div class="card text-white bg-dark mb-3 text-center">
+            <div class="col-lg-4 col-sm-12 py-2">
+                <div class="card text-white bg-dark mb-3 text-center  h-100">
                     <div class="card-body">
                         <h2 class="card-title">Other Art</h2>
                         <a href="other-art.html">
