--- a/project.html
+++ b/project.html
@@ -20,8 +20,8 @@
     </div>
     <div class="central-box">
         <div class="row">
-            <div class="col-lg-4 col-sm-12">
-                <div class="card text-white bg-dark mb-3 text-center">
+            <div class="col-lg-4 col-sm-12 py-2">
+                <div class="card text-white bg-dark mb-3 text-center h-100">
                     <div class="card-body">
                         <h2 class="card-title">Space Explorer</h2>
                         <a href="space-explorer.html">
@@ -30,8 +30,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-sm-12">
-                <div class="card text-white bg-dark mb-3 text-center">
+            <div class="col-lg-4 col-sm-12 py-2">
+                <div class="card text-white bg-dark mb-3 text-center h-100">
                     <div class="card-body">
                         <h2 class="card-title">Haunted Apothecary</h2>
                         <a href="apothecary.html">
@@ -40,8 +40,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-sm-12">
-                <div class="card text-white bg-dark mb-3 text-center">
+            <div class="col-lg-4 col-sm-12 py-2">
+                <div class="card text-white bg-dark mb-3 text-center h-100">
                     <div class="card-body">
                         <h2 class="card-title">Coffee Maker Script</h2>
                         <a href="coffeescript.html">
