--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!--<p>add sum stuff here</p>-->
         <div class="row">
             <div class="col-lg-4 col-sm-12">
-                <div class="card text-white bg-dark mb-3 text-center">
+                <div class="card text-white bg-dark mb-3 text-center hoverable">
                     <div class="card-body">
                         <h2 class="card-title">Projects</h2>
                         <a href="project.html">
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <div class="col-lg-4 col-sm-12">
-                <div class="card text-white bg-dark mb-3 text-center">
+                <div class="card text-white bg-dark mb-3 text-center hoverable">
                     <div class="card-body">
                         <h2 class="card-title">Art Portfolio</h2>
                         <a href="art.html">
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="col-lg-4 col-sm-12">
-                <div class="card text-white bg-dark mb-3 text-center">
+                <div class="card text-white bg-dark mb-3 text-center hoverable">
                     <div class="card-body">
                         <h2 class="card-title">About</h2>
                         <a href="about.html">
