--- a/project.html
+++ b/project.html
@@ -19,9 +19,9 @@
         <h1>Projects</h1>
     </div>
     <div class="central-box">
-        <div class="row">
+        <div class="row py-2">
             <div class="col-lg-4 col-sm-12 py-2">
-                <div class="card text-white bg-dark mb-3 text-center h-100">
+                <div class="card text-white bg-dark mb-3 text-center h-100 hoverable">
                     <div class="card-body">
                         <h2 class="card-title">Space Explorer</h2>
                         <a href="space-explorer.html">
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <div class="col-lg-4 col-sm-12 py-2">
-                <div class="card text-white bg-dark mb-3 text-center h-100">
+                <div class="card text-white bg-dark mb-3 text-center h-100 hoverable">
                     <div class="card-body">
                         <h2 class="card-title">Haunted Apothecary</h2>
                         <a href="apothecary.html">
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="col-lg-4 col-sm-12 py-2">
-                <div class="card text-white bg-dark mb-3 text-center h-100">
+                <div class="card text-white bg-dark mb-3 text-center h-100 hoverable">
                     <div class="card-body">
                         <h2 class="card-title">Coffee Maker Script</h2>
                         <a href="coffeescript.html">
@@ -51,16 +51,31 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="card text-white bg-dark mb-3">
+                    <div class="card-body">
+                        <h2 class="card-title" style="text-align: center;">Other Projects</h2>
+                        <ul>
+                            <li><a href="https://github.com/eroberts22/portfoliobeyond">Portfolio Beyond Source Code</a></li>
+                            <li><a href="https://lizroberts2000.wixsite.com/asteroids-3d" target="_blank">C++/OpenGL 3D Asteroids - April 2021</a></li>
+                            <li><a href="https://lizroberts2000.wixsite.com/garden-simulation" target="_blank">C++ Garden Simulation - April 2020</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--
         <div class="central-box list-box">
             <h2 style="text-align: center;">Other Projects</h2>
             <ul>
-                <!-- <li>Software Engineering Client Project - coming soon</li> -->
                 <li><a href="https://github.com/eroberts22/portfoliobeyond">Portfolio Beyond Source Code</a></li>
                 <li><a href="https://lizroberts2000.wixsite.com/asteroids-3d" target="_blank">C++/OpenGL 3D Asteroids - April 2021</a></li>
                 <li><a href="https://lizroberts2000.wixsite.com/garden-simulation" target="_blank">C++ Garden Simulation - April 2020</a></li>
             </ul>
         </div>
     </div>
+    -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
