card hover fade

--- a/project.html
+++ b/project.html
@@ -35,7 +35,7 @@
                     <div class="card-body">
                         <h2 class="card-title">Haunted Apothecary</h2>
                         <a href="apothecary.html">
-                            <img class="card-img-top" src="img/apothecary/spectre.png" alt="apothecary">
+                            <img class="card-img-top" src="img/apothecary/shadow.png" alt="apothecary">
                         </a>
                     </div>
                 </div>
