--- a/apothecary.html
+++ b/apothecary.html
@@ -19,7 +19,7 @@
         <h1>Haunted Apothecary</h1>
     </div>
     <div class="central-box">
-        <a href="https://github.com/eroberts22/apothecary">Java Dungeon Crawler - January 2021</a>
+        <p>Source Code: <a href="https://github.com/eroberts22/apothecary">Java Dungeon Crawler - January 2021</a></p>
         <p>See the game assets <a href="apothecary-gallery.html">here</a>.</p>
     </div>
 
