--- a/nav.html
+++ b/nav.html
@@ -1,4 +1,23 @@
-<nav role="navigation">
+<nav class="navbar">
+    <div class="logo"><a href="#">Portfolio Beyond.</a></div>
+    <a href="#" class="toggle-button">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+    </a>
+    <div class="navbar-links">
+        <ul>
+            <li><a class="active" href="index.html">HOME</a></li>
+            <li><a href="project.html">PROJECTS</a></li>
+            <li><a href="art.html">ART PORTFOLIO</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+        </ul>
+    </div>
+
+</nav>
+
+<!--
+<nav class="navbar">
     <div id="menuToggle">
         <input type="checkbox"/>
         <span></span>
@@ -7,26 +26,14 @@
 
         <ul id="menu">
             <li><a href="index.html">HOME</a></li>
-            <li><a href="project.html">PROJECTS</a>
-                <ul>
-                    <li><a href="space-explorer.html">Space Explorer</a></li></li>
-                    <li><a href="apothecary.html">Haunted Apothecary</a></li>
-                    <li><a href="coffeescript.html">Coffee Maker Script</a></li>
-                </ul>
-            </li>
-            <li><a href="art.html">ART PORTFOLIO</a>
-            <ul>
-                <li><a href="space-explorer-gallery.html">Space Explorer</a></li>
-                <li><a href="apothecary-gallery.html">Haunted Apothecary</a></li>
-                <li><a href="other-art.html">Other Art</a></li>
-            </li>
-            </ul>
+            <li><a href="project.html">PROJECTS</a></li>
+            <li><a href="art.html">ART PORTFOLIO</a></li>
             <li><a href="about.html">ABOUT</a></li>
         </ul>
-
     </div>
+    <div class="logo"></div>
 </nav>
-
+-->
 <!--
 <nav>
     <ul id="menu">
