--- a/project.html
+++ b/project.html
@@ -10,6 +10,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script>$(function () { $("#navbar").load("nav.html"); });</script>
+    <script src="js/script.js" defer></script>
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
 
@@ -54,7 +55,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="card text-white bg-dark mb-3">
-                    <div class="card-body">
+                    <div class="card-body list-box">
                         <h2 class="card-title" style="text-align: center;">Other Projects</h2>
                         <ul>
                             <li><a href="https://github.com/eroberts22/portfoliobeyond">Portfolio Beyond Source Code</a></li>
