font and page title changes

--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
 </head>
 <body class="image-body space-body">
     <div id="navbar-placeholder"></div>
+    <div class="page-title">About Me<span>.</span></div>
     <div class="central-box">
         <a href="https://www.linkedin.com/in/elizabeth-roberts-in/">LinkedIn</a>
     </div>
