--- a/apothecary-gallery.html
+++ b/apothecary-gallery.html
@@ -15,9 +15,7 @@
 
 <body class="image-body space-body">
     <div id="navbar-placeholder"></div>
-    <div class="central-box title-box">
-        <h1>Haunted Apothecary</h1>
-    </div>
+    <div class="page-title">Haunted Apothecary<span>.</span></div>
     <div class="central-box art-box">
         <h2>Monsters</h2>
         <div class="row">
