--- a/apothecary.html
+++ b/apothecary.html
@@ -15,9 +15,7 @@
 
 <body class="image-body space-body">
     <div id="navbar-placeholder"></div>
-    <div class="central-box title-box">
-        <h1>Haunted Apothecary</h1>
-    </div>
+    <div class="page-title">Haunted Apothecary<span>.</span></div>
     <div class="central-box">
         <p>Source Code: <a href="https://github.com/eroberts22/apothecary">Java Dungeon Crawler - January 2021</a></p>
         <p>See the game assets <a href="apothecary-gallery.html">here</a>.</p>
