--- a/art.html
+++ b/art.html
@@ -15,6 +15,7 @@
 
 <body class="image-body space-body">
     <div id="navbar-placeholder"></div>
+    <div class="page-title">Art Portfolio<span>.</span></div>
     <div class="central-box">
         <!--<p>Original game assets and art</p>-->
         <div class="row">
@@ -41,7 +42,7 @@
             <div class="col-lg-4 col-sm-12 py-2">
                 <div class="card text-white bg-dark mb-3 text-center h-100 hoverable">
                     <div class="card-body">
-                        <h2 class="card-title">Other Art</h2>
+                        <h2 class="card-title">Digital Art</h2>
                         <a href="other-art.html">
                             <img class="card-img-top" src="img/space_explorer/portal-end.png" alt="ghost">
                         </a>
