--- a/other-art.html
+++ b/other-art.html
@@ -13,9 +13,7 @@
 </head>
 <body class="image-body space-body">
     <div id="navbar-placeholder"></div>
-    <div class="central-box title-box">
-        <h1>Art Gallery</h1>
-    </div>
+    <div class="page-title">Digital Art<span>.</span></div>
     <div class="central-box art-box">
         <div class="card text-white bg-dark mb-3 text-center">
             <div class="card-body">
