--- a/project.html
+++ b/project.html
@@ -15,6 +15,7 @@
 
 <body class="image-body space-body">
     <div id="navbar-placeholder"></div>
+    <div class="page-title">Projects<span>.</span></div>
     <div class="central-box">
         <div class="row py-2">
             <div class="col-lg-4 col-sm-12 py-2">
@@ -52,7 +53,7 @@
             <div class="col-lg-12">
                 <div class="card text-white bg-dark mb-3">
                     <div class="card-body list-box">
-                        <h2 class="card-title" style="text-align: center;">Other Projects</h2>
+                        <h4 class="card-title" style="text-align: center;">Other Projects</h4>
                         <ul>
                             <li><a href="https://github.com/eroberts22/portfoliobeyond">Portfolio Beyond Source Code</a></li>
                             <li><a href="https://lizroberts2000.wixsite.com/asteroids-3d" target="_blank">C++/OpenGL 3D Asteroids - April 2021</a></li>
