--- a/coffeescript.html
+++ b/coffeescript.html
@@ -13,9 +13,7 @@
 </head>
 <body class="image-body space-body">
     <div id="navbar-placeholder"></div>
-    <div class="central-box title-box">
-        <h1>Coffee Maker Script</h1>
-    </div>
+    <div class="page-title">Coffee Maker Script<span>.</span></div>
     <div class="central-box">
         <p>Source Code: <a href="https://github.com/eroberts22/coffeescript">Flex/Bison Coffee Maker Scripting Language - December 2021</a></p>
     </div>
