--- a/nav.html
+++ b/nav.html
@@ -1,5 +1,5 @@
 <nav class="navbar">
-    <div class="logo"><a href="index.html">Portfolio Beyond.</a></div>
+    <div class="logo"><a href="index.html">Portfolio Beyond<span>.</span></a></div>
     <a href="#" class="toggle-button">
         <span class="bar"></span>
         <span class="bar"></span>
