--- a/space-explorer-gallery.html
+++ b/space-explorer-gallery.html
@@ -15,9 +15,7 @@
 
 <body class="image-body space-body">
     <div id="navbar-placeholder"></div>
-    <div class="central-box title-box">
-        <h1>Space Explorer</h1>
-    </div>
+    <div class="page-title">Space Explorer<span>.</span></div>
     <div class="central-box art-box">
         <h2>General Assets</h2>
         <div class="row">
