--- a/space-explorer.html
+++ b/space-explorer.html
@@ -13,9 +13,7 @@
 </head>
 <body class="image-body space-body">
     <div id="navbar-placeholder"></div>
-    <div class="central-box title-box">
-        <h1>Space Explorer</h1>
-    </div>
+    <div class="page-title">Space Explorer<span>.</span></div>
     <div class="central-box">
         <p><img src="img/space_explorer/rocket.png" alt="rocket">
             Space Explorer is a sidescroller version of the classic asteroids game implemented using HTML, CSS, and Javascript. I developed this game 
